--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -21,7 +21,7 @@ Our navigation syntax is recursive which means you can make nested navigation gr
       "tab": "Docs",
       "groups": [
         {
-          "group": "Getting Started",
+          "group": "Seja bem vindo!",
           "pages": ["quickstart"]
         }
       ]
@@ -37,7 +37,7 @@ Our navigation syntax is recursive which means you can make nested navigation gr
       "tab": "Docs",
       "groups": [
         {
-          "group": "Getting Started",
+          "group": "Seja bem vindo!",
           "pages": [
             "quickstart",
             {
