--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,111 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: "Instalando o sistema"
+description: "Aprenda a criar e configurar o seu BOT em poucos minutos"
+icon: "robot"
 ---
 
-## Get started in three steps
+### Passo 1: Criar o BOT no Discord
 
-Get your documentation site running locally and make your first customization.
+    1. Vá até o [Discord Developer Portal](https://discord.com/developers/applications) e clique em **New Application**.  
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo1.png)
+    </Frame>
 
-### Step 1: Set up your local environment
+    2. Dê um nome para o seu **BOT**, marque a caixinha e clique em **Create**.  
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo2.png)
+    </Frame>
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
+    3. Após criar o **BOT**, clique em **OAuth2**.  
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo3.png)
+    </Frame>
+
+    3. Descendo um pouco a página, marque as 2 caixinhas: **bot** e **Administrator**.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo4.jpg)
+    </Frame>
+
+    4. Em seguida, clique em copiar o link e abra uma nova guia.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo5.jpg)
+    </Frame>
+
+    5. Após inserir o link em uma nova guia, o discord irá redirecionar para o programa, para você selecionar o servidor que deseja inserir o **BOT**. Selecione e clique em **Continuar**.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo7.jpg)
+    </Frame>
+
+    6. Agora é momento de integrarmos ele com o sistema da CodingBots, clicando em **Bot** no [Painel do Desenvolvedor](https://discord.com/developers/applications).
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo8.jpg)
+    </Frame>
+
+    7. Desca um pouco a página e **ative essas 3 opções** e salve a configuração.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo20.jpg)
+    </Frame>
+
+    8. Suba um pouco a página, ainda em **Bot** e Resete seu **TOKEN**.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo9.jpg)
+    </Frame>
+
+    9. Após resetar o **TOKEN**, clique em Copy.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo10.jpg)
+    </Frame>
+
+    <Warning>Guarde seu token em um local seguro, ele é a chave de acesso do seu BOT.</Warning>
+
+### Passo 2: Ativando o modo desenvolvedor do discord
+    1. Clique na engrenagem de configuração do seu usuário discord.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo13.jpg)
+    </Frame>
+
+    2. Selecione a opção **Avançado**. 
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo14.jpg)
+    </Frame>
+
+    3. Deixe ativo a opção **Modo desenvolvedor** e salve a configuração.
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo15.jpg)
+    </Frame>
+
+
+### Passo 3: Ative seu BOT com 7 dias gratuitos
+
+    1. Vá até o [nosso site](https://discord.com/developers/applications) e clique em **Teste grátis**. 
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo11.jpg)
+    </Frame>
+
+    2. Preencha com o **TOKEN** que você gerou, ID do seu servidor onde o **BOT** está e com o seu **ID** do discord. 
+    <Accordion icon="check-circle" title="Onde consigo os ID's?">
+      **ID do Servidor:** Clique com o botão direito no seu servidor e clique em **Copiar ID do servidor**.
+
+      **ID do Usuário:** Clique com o botão direito no seu perfil e clique em **Copiar ID do usuário**.
+    </Accordion>
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo12.jpg)
+    </Frame>
+
+---
+
+### Desfrute do nosso sistema sem limites por 7 dias gratuitos!
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo18.jpg)
+    </Frame>
     
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+    <Frame>
+      ![Sistema de BOT](/images/shared/create_bot/passo19.jpg)
+    </Frame>
 
-### Step 2: Deploy your changes
+---
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
-
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+<Tip>
+  Precisa de ajuda? Fale com a nossa equipe pelo [WhatsApp](LINK) ou entre no nosso [Discord](https://discord.gg/NjwejHyTDc).  
+  Estamos prontos para tirar todas as suas dúvidas!
+</Tip>
