Alteração do nome

--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -22,7 +22,7 @@ Our navigation syntax is recursive which means you can make nested navigation gr
       "groups": [
         {
           "group": "Seja bem vindo!",
-          "pages": ["quickstart"]
+          "pages": ["installation"]
         }
       ]
     }
@@ -39,7 +39,7 @@ Our navigation syntax is recursive which means you can make nested navigation gr
         {
           "group": "Seja bem vindo!",
           "pages": [
-            "quickstart",
+            "installation",
             {
               "group": "Nested Reference Pages",
               "pages": ["nested-reference-page"]
