Inserido vídeo de instalação

--- a/installation.mdx
+++ b/installation.mdx
@@ -1,10 +1,21 @@
 ---
-title: "Instalando o sistema"
+title: "Como instalar o BOT"
 description: "Aprenda a criar e configurar o seu BOT em poucos minutos"
 icon: "robot"
 ---
 
-### Passo 1: Criar o BOT no Discord
+## Guia em vídeo:
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.youtube.com/embed/of5xFsIzQhY"
+  title="Título descritivo do vídeo"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
+
+
+## Passo a passo (versão escrita):
 
     1. Vá até o [Discord Developer Portal](https://discord.com/developers/applications) e clique em **New Application**.  
     <Frame>
