Atualização nos links do discord

--- a/installation.mdx
+++ b/installation.mdx
@@ -117,6 +117,6 @@ icon: "robot"
 ---
 
 <Tip>
-  Precisa de ajuda? Fale com a nossa equipe pelo [WhatsApp](LINK) ou entre no nosso [Discord](https://discord.gg/NjwejHyTDc).  
+  Precisa de ajuda? Fale com a nossa equipe pelo [WhatsApp](LINK) ou entre no nosso [Discord](https://discord.gg/NvdwFuSUD9).  
   Estamos prontos para tirar todas as suas dúvidas!
 </Tip>
