--- a/index.mdx
+++ b/index.mdx
@@ -10,6 +10,6 @@ Nosso objetivo é oferecer soluções inteligentes que facilitam a gestão do se
 ---
 
 <Tip>
-  Precisa de ajuda? Fale com a nossa equipe pelo [WhatsApp](LINK) ou entre no nosso [Discord](https://discord.gg/NjwejHyTDc).  
+  Precisa de ajuda? Fale com a nossa equipe pelo [WhatsApp](LINK) ou entre no nosso [Discord](https://discord.gg/NvdwFuSUD9).  
   Estamos prontos para tirar todas as suas dúvidas!
 </Tip>
