Atualizado categorias e adicionado "Como conseguir ID do cargo"

--- a/index.mdx
+++ b/index.mdx
@@ -1,12 +1,7 @@
 ---
 title: "Início"
-description: "Bem-vindo a página de documentação da CodingBots."
-icon: "circle-check"
----
-
-A CodingBots é especializada no desenvolvimento de BOTs para Discord, criados especialmente para servidores de FiveM.
-Nosso objetivo é oferecer soluções inteligentes que facilitam a gestão do seu servidor e tornam a experiência dos jogadores mais completa e organizada.
-
+description: "A CodingBots é especializada no desenvolvimento de BOTs para Discord, criados especialmente para servidores de FiveM. Nosso objetivo é oferecer soluções inteligentes que facilitam a gestão do seu servidor e tornam a experiência dos jogadores mais completa e organizada."
+icon: "house"
 ---
 
 <Tip>
