--- a/general.mdx
+++ b/general.mdx
@@ -5,6 +5,7 @@ icon: "discord"
 ---
 
 <Card title="Como conseguir ID do cargo" icon="user" href="/general/conseguir-cargos" horizontal></Card>
+<Card title="Como conectar o BOT no seu Banco de Dados" icon="database" href="/general/banco-de-dados" horizontal></Card>
 
 
 <Tip>
