--- a/general/banco-de-dados.mdx
+++ b/general/banco-de-dados.mdx
@@ -23,7 +23,7 @@ icon: "tag"
 
 ## Conectando o BOT
 
-Agora que você possui um usuário no banco de dados, vamos conectar ao banco de dados.
+Agora que você possui um usuário no banco de dados, vamos conectar ao BOT.
 
 1. Digite o comando `/config-database` no seu **BOT**.
 2. Preencha o formulário aberto com as informações do banco de dados que você criou no passo anterior.
