Novas atualizações de whitelist e como conseguir IDS e link imagem

--- a/general.mdx
+++ b/general.mdx
@@ -5,7 +5,10 @@ icon: "discord"
 ---
 
 <Card title="Como conseguir ID do cargo" icon="user" href="/general/conseguir-cargos" horizontal></Card>
+<Card title="Como conseguir ID da categoria" icon="list" href="/general/conseguir-categorias" horizontal></Card>
+<Card title="Como conseguir ID do canal" icon="door-open" href="/general/conseguir-canais" horizontal></Card>
 <Card title="Como conectar o BOT no seu Banco de Dados" icon="database" href="/general/banco-de-dados" horizontal></Card>
+<Card title="Como conseguir link de imagem personalizada" icon="images" href="/general/imagens" horizontal></Card>
 
 
 <Tip>
