--- a/general/banco-de-dados.mdx
+++ b/general/banco-de-dados.mdx
@@ -41,6 +41,10 @@ Agora que você possui um usuário no banco de dados, vamos conectar ao BOT.
   ![Conectar Banco de Dados](/images/shared/connect_sql/connect_sql4.jpg)
 </Frame>
 
+<Check>
+  Agora você está pronto para configurar a [whitelist](../tutoriais/whitelist) ou [liberação direta](LINK)
+</Check>
+
 ---
 
 <Tip>
