Adicionado ticket e finalizado whitelist

--- a/general/conseguir-categorias.mdx
+++ b/general/conseguir-categorias.mdx
@@ -7,14 +7,14 @@ icon: "tag"
 
 
 
-## Pegue o ID de qualquer cargo no servidor
-Para localizar o ID de um cargo no Discord, é necessário ativar antes o Modo Desenvolvedor na sua conta. Siga os passos abaixo:
+## Pegue o ID de qualquer categoria no servidor
+Para localizar o ID de um categoria no Discord, é necessário ativar antes o Modo Desenvolvedor na sua conta. Siga os passos abaixo:
 1. Acesse a **configurações da sua conta** no Discord.
 2. Clique em **Avançado**.
 3. Habilite o **Modo Desenvolvedor**.
 
 <Frame>
-  ![Conseguir ID Cargo](/images/shared/developer_mode/developermod-1.jpg)
+  ![Conseguir ID Categoria](/images/shared/developer_mode/developermod-1.jpg)
 </Frame>
 
 Depois de ativar o Modo Desenvolvedor, siga estas etapas para copiar o ID de um cargo:
@@ -25,7 +25,7 @@ Depois de ativar o Modo Desenvolvedor, siga estas etapas para copiar o ID de um 
 4. Selecione a opção **Copiar ID**.
 
 <Frame>
-  ![Conseguir ID Cargo](/images/shared/get_categories/categories-1.jpg)
+  ![Conseguir ID Categoria](/images/shared/get_categories/categories-1.jpg)
 </Frame>
 
 ---
