--- a/tutoriais/whitelist.mdx
+++ b/tutoriais/whitelist.mdx
@@ -61,7 +61,7 @@ As respostas **sempre** devem ser escritas após os dois pontos `:`
 
 Nesta etapa vamos estar configurando os canais de log da nossa whitelist.
 - Primeiro vamos copiar o `ID` do canal de **aprovados** e **reprovados**.
-<br/>[(Como copiar ID do canal)](LINK)
+<br/>[(Como copiar ID do canal)](../general/conseguir-canais)
 
 - Após copiar o `ID` do canal, vamos colar em suas respectivas caixas conforme mostrado na imagem abaixo
 
@@ -73,7 +73,7 @@ Nesta etapa vamos estar configurando os canais de log da nossa whitelist.
 
 Vamos setar as configurações gerais da whitelist.
 
-- Primeiro vamos copiar o `ID` da categoria whitelist. [(Como copiar ID da categoria)](LINK)
+- Primeiro vamos copiar o `ID` da categoria whitelist. [(Como copiar ID da categoria)](../general/conseguir-categorias)
 
 - Com o `ID` da categoria whitelist copiado, insira o `ID` em **ID da categoria Whitelist**.
 
@@ -93,7 +93,7 @@ Por último, vamos configurar a embed da whitelist.
 
 - Vamos primeiro inserir o texto que será exibido na embed da whitelist.
 
-- Após isso, inserir a URL da imagem da embed. [(Como copiar URL da imagem)](LINK)
+- Após isso, inserir a URL da imagem da embed. [(Como copiar URL da imagem)](../general/imagens)
 
 <Info>
 Caso queira deixar padrão, deixe o campo vazio.
@@ -102,6 +102,8 @@ Caso queira deixar padrão, deixe o campo vazio.
 <Frame>
   ![whitelist](/images/shared/whitelist/whitelist-6.jpg)
 </Frame>
+
+---
 
 <Tip>
   Precisa de ajuda? Fale com a nossa equipe pelo [WhatsApp](LINK) ou entre no nosso [Discord](https://discord.gg/NvdwFuSUD9).  
