--- a/tutoriais/whitelist.mdx
+++ b/tutoriais/whitelist.mdx
@@ -27,7 +27,7 @@ No exemplo abaixo, minha tabela é `summerz_accounts`:
 
 Basta verificar o que sua base pede quando o jogador entrar no servidor:
 
-**se pedir ID**, preencha com `id` <br/>**se pedir SteamHex**, preencha com `steam` <br/>**se pedir CITIZEN_ID**, preencha com `CITIZEN_ID`
+**se pedir ID**, preencha com `id` <br/>**se pedir SteamHex**, preencha com `steam` <br/>**se pedir CITIZEN_ID**, preencha com `citizen_id`
 
 No exemplo abaixo, a minha base solicita `Steam Hex`:
 
