--- a/tutoriais/liberacao-direta.mdx
+++ b/tutoriais/liberacao-direta.mdx
@@ -20,7 +20,7 @@ A tabela certa é onde estão os jogadores da sua cidade. Ela precisa ter uma co
 No exemplo abaixo, minha tabela é `summerz_accounts`: 
 
 <Frame>
-  ![whitelist](/images/shared/whitelist/whitelist-2.jpg)
+  ![liberacao](/images/shared/whitelist/whitelist-2.jpg)
 </Frame>
 
 ## Como identificar o tipo de liberação
@@ -32,7 +32,28 @@ Basta verificar o que sua base pede quando o jogador entrar no servidor:
 No exemplo abaixo, a minha base solicita `Steam Hex`:
 
 <Frame>
-  ![whitelist](/images/shared/get_liberation/liberation-1.jpg)
+  ![liberacao](/images/shared/get_liberation/liberation-1.jpg)
+</Frame>
+
+## Definindo canal de connect do servidor
+
+1. Localize o canal de connect.
+2. Clique com botão direto e copie o `ID` do canal. [(Como copiar ID do canal)](../general/conseguir-canais)
+
+<Frame>
+  ![liberacao](/images/shared/get_liberation/liberation-2.jpg)
+</Frame>
+
+## Configurando mensagem da Embed de liberação
+
+Adicione uma descrição de sua preferência para a embed de liberação.
+<br/>Caso queira deixar o padrão da **Coding**, deixe o campo vazio.
+
+Para adicionar uma imagem, basta colar a URL da imagem de sua preferência.
+<br/>[(Como copiar URL da imagem)](../general/imagens)
+
+<Frame>
+  ![liberacao](/images/shared/get_liberation/liberation-3.jpg)
 </Frame>
 
 ---
