--- a/tutoriais/liberacao-direta.mdx
+++ b/tutoriais/liberacao-direta.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Configurando liberação direta"
+title: "Sistema de liberação direta"
 description: "Neste guia, mostraremos como configurar o sistema de liberação direta."
 icon: "key"
 ---
