--- a/tutoriais/tickets.mdx
+++ b/tutoriais/tickets.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Como configurar os tickets"
+title: "Sistema de tickets"
 description: "Neste guia, mostraremos como configurar o sistema de tickets."
 icon: "ticket"
 ---
