--- a/tutoriais/whitelist.mdx
+++ b/tutoriais/whitelist.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Como configurar a whitelist"
+title: "Sistema de whitelist"
 description: "Neste guia, mostraremos como configurar o sistema de whitelist."
 icon: "align-left"
 ---
