--- a/tutoriais/connect.mdx
+++ b/tutoriais/connect.mdx
@@ -84,6 +84,10 @@ Defina se quer mostrar o número de jogadores online no seu servidor:
   ![connect](/images/shared/get_connect/connect-8.jpg)
 </Frame>
 
+<Note>
+Após configurar, basta ir até o canal desejado e digitar `/send-connect`.
+</Note>
+
 ---
 
 <Tip>
