--- a/tutoriais/liberacao-direta.mdx
+++ b/tutoriais/liberacao-direta.mdx
@@ -56,6 +56,10 @@ Para adicionar uma imagem, basta colar a URL da imagem de sua preferência.
   ![liberacao](/images/shared/get_liberation/liberation-3.jpg)
 </Frame>
 
+<Note>
+Após configurar, basta ir até o canal desejado e digitar `/send-liberacao`.
+</Note>
+
 ---
 
 <Tip>
