--- a/tutoriais/tickets.mdx
+++ b/tutoriais/tickets.mdx
@@ -59,6 +59,10 @@ Caso queira também uma imagem para fechamento do ticket, basta colar a URL da i
   ![whitelist](/images/shared/get_tickets/tickets-6.jpg)
 </Frame>
 
+<Note>
+Após configurar, basta ir até o canal desejado e digitar `/send-tickets`.
+</Note>
+
 ---
 
 <Tip>
