--- a/tutoriais/whitelist.mdx
+++ b/tutoriais/whitelist.mdx
@@ -103,6 +103,10 @@ Caso queira deixar padrão, deixe o campo vazio.
   ![whitelist](/images/shared/whitelist/whitelist-6.jpg)
 </Frame>
 
+<Note>
+Após configurar, basta ir até o canal desejado e digitar `/send-whitelist`.
+</Note>
+
 ---
 
 <Tip>
