Boas vindas, anuncios e antilinks

--- a/tutoriais/tickets.mdx
+++ b/tutoriais/tickets.mdx
@@ -4,13 +4,14 @@ description: "Neste guia, mostraremos como configurar o sistema de tickets."
 icon: "ticket"
 ---
 
-## Adicionando categoria de tickets
+## Iniciando a configuração
 
-1. Primeiramente vamos criar o **Nome da categoria**.
-2. Após isso vamos adicionar a descrição da categoria.
-3. Adicione o `ID` da categoria. [(Como copiar ID da categoria)](../general/conseguir-categorias)
-4. Adicione um emoji de sua preferência.
-5. Por último, adicione os `ID's` dos cargos que terão permissões para interagir nos tickets.
+1. Digite o comando `/config-tickets` em um canal seguro do seu servidor.
+2. Primeiramente vamos criar o **Nome da categoria**.
+3. Após isso vamos adicionar a descrição da categoria.
+4. Adicione o `ID` da categoria. [(Como copiar ID da categoria)](../general/conseguir-categorias)
+5. Adicione um emoji de sua preferência.
+6. Por último, adicione os `ID's` dos cargos que terão permissões para interagir nos tickets.
 
 <Frame>
   ![whitelist](/images/shared/get_tickets/tickets-1.jpg)
