--- a/tutoriais/whitelist.mdx
+++ b/tutoriais/whitelist.mdx
@@ -81,7 +81,7 @@ Vamos setar as configurações gerais da whitelist.
 
 - Embaixo, configure o tempo limite que cada pergunta deve ter.
 
-- Por último, basta inserir o `ID` do cargo que será atribuído aos usuários que forem aprovados. [(Como copiar ID do cargo)](LINK)
+- Por último, basta inserir o `ID` do cargo que será atribuído aos usuários que forem aprovados. [(Como copiar ID do cargo)](../general/conseguir-cargos)
 
 <Frame>
   ![whitelist](/images/shared/whitelist/whitelist-5.jpg)
