Ultimas atualizações documentação

--- a/tutoriais/anuncios.mdx
+++ b/tutoriais/anuncios.mdx
@@ -1,22 +1,19 @@
 ---
-title: "Sistema de Anúncios"
+title: "Sistema de anúncios"
 description: "Neste guia, mostraremos como configurar o sistema de anúncios."
 icon: "bullhorn"
 ---
 
-## Iniciando a configuração
+## Enviando um anúncio
 
-1. Digite o comando `/anuncio` em um canal seguro do seu servidor.
-2. Escolha o canal desejado.
+1. Digite o comando `/anuncio` em qualquer canal do seu servidor.
+2. Dê um espaço e selecione o canal que deseja enviar o anúncio.
+3. Escolha as opções que desejar em seu anúncio e clique em enviar.
+[(Como inserir imagem no anúncio)](../general/imagens)
 
 <Frame>
   ![anuncio](/images/shared/get_ad/ad-1.jpg)
 </Frame>
-
-Após escolher o canal, escolha:
-- Título.
-- Descrição da mensagem.
-- Link da imagem caso haja necessidade. [(Como copiar URL da imagem)](../general/imagens)
 
 <Frame>
   ![anuncio](/images/shared/get_ad/ad-2.jpg)
