--- a/tutoriais/boasvindas.mdx
+++ b/tutoriais/boasvindas.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Sistema de Boas Vindas"
+title: "Sistema de boas vindas"
 description: "Neste guia, mostraremos como configurar o sistema de boas vindas."
 icon: "champagne-glasses"
 ---
@@ -7,6 +7,7 @@ icon: "champagne-glasses"
 ## Iniciando a configuração
 
 1. Digite o comando `/config-boasvindas` em um canal seguro do seu servidor.
+2. Selecione uma das opções no menu e siga as orientações abaixo.
 
 ## Configurando sistema de Boas-vindas
 
@@ -26,8 +27,7 @@ Insira o `ID` do canal de despedidas. [(Como copiar ID do canal)](../general/con
 
 ## Configurando mensagem de Boas-vindas
 
-Insira a mensagem de boas-vindas.
-<br/> Deixe o campo vazio se quiser mensagem padrão.
+Insira uma mensagem de boas-vindas personalizada ou deixe o campo vazio para usar a mensagem padrão.
 
 <Frame>
   ![suggestion](/images/shared/get_wellcome/wellcome-3.jpg)
@@ -35,8 +35,7 @@ Insira a mensagem de boas-vindas.
 
 ## Configurando mensagem de Despedidas
 
-Insira a mensagem de despedida.
-<br/> Deixe o campo vazio se quiser mensagem padrão.
+Insira uma mensagem de despedida personalizada ou deixe o campo vazio para usar a mensagem padrão.
 
 <Frame>
   ![suggestion](/images/shared/get_wellcome/wellcome-4.jpg)
@@ -44,7 +43,7 @@ Insira a mensagem de despedida.
 
 ## Configurando imagem de Boas-vindas
 
-Insira o link da imagem de sua preferência. [(Como copiar URL da imagem)](../general/imagens)
+Insira o link da imagem de sua preferência. [(Como inserir o link de imagem)](../general/imagens)
 
 <Frame>
   ![suggestion](/images/shared/get_wellcome/wellcome-5.jpg)
@@ -52,7 +51,7 @@ Insira o link da imagem de sua preferência. [(Como copiar URL da imagem)](../ge
 
 ## Configurando imagem de Despedidas
 
-Insira o link da imagem de sua preferência. [(Como copiar URL da imagem)](../general/imagens)
+Insira o link da imagem de sua preferência. [(Como inserir o link de imagem)](../general/imagens)
 
 <Frame>
   ![suggestion](/images/shared/get_wellcome/wellcome-6.jpg)
@@ -60,7 +59,7 @@ Insira o link da imagem de sua preferência. [(Como copiar URL da imagem)](../ge
 
 ## Configurando cargo de Visitante
 
-Insira o `ID` do cargo de visitante. [(Como copiar ID do cargo)](../general/conseguir-cargos)
+Insira o `ID` do cargo que será atribuído ao usuário que entrar no servidor. [(Como copiar ID do cargo)](../general/conseguir-cargos)
 
 <Frame>
   ![suggestion](/images/shared/get_wellcome/wellcome-7.jpg)
