--- a/tutoriais/sugestoes.mdx
+++ b/tutoriais/sugestoes.mdx
@@ -7,22 +7,24 @@ icon: "lightbulb"
 ## Iniciando a configuração
 
 1. Digite o comando `/config-sugestoes` em um canal seguro do seu servidor.
+2. Insira o `ID` do canal que receberá as sugestões. [(Como copiar ID do canal)](../general/conseguir-canais)
+3. Insira o texto da Embed de sugestões ou deixe vazio caso queira deixar padrão.
+4. Por último, insira o link da imagem Embed de sugestões. [(Como copiar URL da imagem)](../general/imagens). Deixe vazio caso queira a imagem padrão da **Coding**.
 
 ## Configurando sistema de sugestões
 
-Insira o `ID` do canal de sugestões.
 
-Insira o texto da Embed de sugestões, deixe vazio caso queira padrão.
 
-Por último, insira o link da imagem Embed de sugestões. [(Como copiar URL da imagem)](../general/imagens)
-<br/>Deixe vazio caso queira a imagem padrão da **Coding**.
+
+
+
 
 <Frame>
   ![suggestion](/images/shared/get_suggestion/suggestion-1.jpg)
 </Frame>
 
 <Note>
-Após configurar, basta ir até o canal desejado e digitar `/send-sugestoes`.
+Após configurar, basta ir até o canal que o público irá sugerir e digitar `/send-sugestoes`.
 </Note>
 
 ---
