--- a/tutoriais/antilinks.mdx
+++ b/tutoriais/antilinks.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Sistema de Anti-links"
+title: "Sistema de anti-links"
 description: "Neste guia, mostraremos como configurar o sistema de anti-links."
 icon: "shield-halved"
 ---
@@ -7,18 +7,16 @@ icon: "shield-halved"
 ## Iniciando a configuração
 
 1. Digite o comando `/config-antilinks` em um canal seguro do seu servidor.
+2. Selecione os cargos que terão permissões para enviar links no servidor e salve a configuração.
 
-## Configurando sistema antilinks
-
-Configure os cargos que terão permissões para enviar links no servidor.
 
 <Frame>
   ![suggestion](/images/shared/get_antilinks/antilinks-1.jpg)
 </Frame>
 
-## Ativando o sistema antilinks
+## Ativando/desativando o sistema anti-links
 
-Clique em ativar/desativar para ligar ou desligar o sistema.
+Escolha ativar ou desativar e receba uma mensagem indicando se o sistema está ligado ou desligado.
 
 <Frame>
   ![suggestion](/images/shared/get_antilinks/antilinks-2.jpg)
