Atualização no sistema de boas vindas

--- a/tutoriais/boasvindas.mdx
+++ b/tutoriais/boasvindas.mdx
@@ -9,60 +9,41 @@ icon: "champagne-glasses"
 1. Digite o comando `/config-boasvindas` em um canal seguro do seu servidor.
 2. Selecione uma das opções no menu e siga as orientações abaixo.
 
-## Configurando sistema de Boas-vindas
+## Configurando os canais do sistema
 
-Insira o `ID` do canal de boas vindas. [(Como copiar ID do canal)](../general/conseguir-canais)
+1. Informe o **ID** do canal de boas-vindas (canal público).
+2. Informe o **ID** do canal de despedida (canal público).
+3. Informe o **ID** do canal de logs detalhados — aqui serão registradas informações como tempo de conta e data de entrada no servidor (canal privado).
 
+Após isso, clique em **Enviar**.
+
+[(Como copiar ID de um canal)](../general/conseguir-canais)
 <Frame>
-  ![suggestion](/images/shared/get_wellcome/wellcome-1.jpg)
+  ![Boas Vindas](/images/shared/get_wellcome/boasvindas-1.jpg)
 </Frame>
 
-## Configurando o sistema de Despedidas
+## Configurando as mensagens de entrada e saída do servidor
 
-Insira o `ID` do canal de despedidas. [(Como copiar ID do canal)](../general/conseguir-canais)
+1. Escreva a mensagem que será enviada aos membros que entrar/sair do servidor. *(Se não quiser personalizar, deixe em branco e será usada a padrão).*
+2. Você também pode personalizar a entrada e saída com **imagens**. Para isso, basta colar o link nos campos indicados.
+
+Após isso, clique em **Enviar**.
+
+Veja: [(Como conseguir o link de imagem personalizada)](../general/imagens)
 
 <Frame>
-  ![suggestion](/images/shared/get_wellcome/wellcome-2.jpg)
+  ![Boas Vindas](/images/shared/get_wellcome/boasvindas-2.jpg)
 </Frame>
 
-## Configurando mensagem de Boas-vindas
+## Configurando o cargo de entrada no servidor
 
-Insira uma mensagem de boas-vindas personalizada ou deixe o campo vazio para usar a mensagem padrão.
+1. Copie e cole aqui o **ID do cargo** que o BOT deve aplicar automaticamente aos usuários ao entrarem no servidor.
+2. Depois disso, basta clicar em Salvar e seu sistema estará configurado.
+
+Veja: [(Como copiar o ID de um cargo)](../general/conseguir-cargos)
 
 <Frame>
   ![suggestion](/images/shared/get_wellcome/wellcome-3.jpg)
-</Frame>
-
-## Configurando mensagem de Despedidas
-
-Insira uma mensagem de despedida personalizada ou deixe o campo vazio para usar a mensagem padrão.
-
-<Frame>
-  ![suggestion](/images/shared/get_wellcome/wellcome-4.jpg)
-</Frame>
-
-## Configurando imagem de Boas-vindas
-
-Insira o link da imagem de sua preferência. [(Como inserir o link de imagem)](../general/imagens)
-
-<Frame>
-  ![suggestion](/images/shared/get_wellcome/wellcome-5.jpg)
-</Frame>
-
-## Configurando imagem de Despedidas
-
-Insira o link da imagem de sua preferência. [(Como inserir o link de imagem)](../general/imagens)
-
-<Frame>
-  ![suggestion](/images/shared/get_wellcome/wellcome-6.jpg)
-</Frame>
-
-## Configurando cargo de Visitante
-
-Insira o `ID` do cargo que será atribuído ao usuário que entrar no servidor. [(Como copiar ID do cargo)](../general/conseguir-cargos)
-
-<Frame>
-  ![suggestion](/images/shared/get_wellcome/wellcome-7.jpg)
 </Frame>
 
 ---
