--- a/tutoriais/boasvindas.mdx
+++ b/tutoriais/boasvindas.mdx
@@ -42,6 +42,10 @@ Veja: [(Como conseguir o link de imagem personalizada)](../general/imagens)
 
 Veja: [(Como copiar o ID de um cargo)](../general/conseguir-cargos)
 
+<Frame>
+  ![Boas Vindas](/images/shared/get_wellcome/boasvindas-3.jpg)
+</Frame>
+
 ---
 
 <Tip>
