Somado tutorial rename

--- a/tutoriais/rename.mdx
+++ b/tutoriais/rename.mdx
@@ -31,6 +31,19 @@ icon: "id-card"
 ensure codingbots
 ```
 
+## Configurando cargos para não serem renomeados
+
+1. Digite o comando `/config-rename` no seu servidor discord.
+2. Insira o ID do cargo não quer renomear e clique em enviar.
+
+<Info>
+  É possível ter multiplas funções. Mas envie sempre 1 de cada vez!
+</Info>
+
+<Frame>
+  ![Rename](/images/shared/get_rename/rename-3.jpg)
+</Frame>
+
 ---
 
 <Tip>
