arrumado arquivo do rename

--- a/tutoriais/rename.mdx
+++ b/tutoriais/rename.mdx
@@ -7,7 +7,7 @@ icon: "id-card"
 
 1. Faça o download do nosso script clicando no botão abaixo.
 
-<a href="/downloads/codingbots.zip" download>
+<a href="/downloads/codingbots.rar" download>
   📥 Baixar Script
 </a>
 
